--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,10 @@ dist/
 wheels/
 *.egg-info
 
-# Virtual environments
+#Mael
 .venv
+.python-version
+pyproject.toml
+#Jean
+requirements.in
+rerequirements.txt
